Fix evidence keys reordering between JVM runs